packages/beff-wasm/fixtures/errors/cannot-resolve/r11.ts
export { r10 as r11 } from "./r10";
